# dzen-utils

./: .gitignore  Example1.hs  Example2.hs  dzen-utils.cabal
System/: Dzen.hs
System/Dzen/: Bars.hs  Base.hs  Colour.hs  Graphics.hs  Internal.hs  Padding.hs  Process.hs
src/System/Dzen/: Bars.hs  Base.hs  Internal.hs  Process.hs
test/: Main.hs
test/System/Dzen/: PaddingSpec.hs
