cabal-version:       >= 1.10
name:                dzen-utils
version:             0.1.1
synopsis:            Utilities for creating inputs for dzen.
category:            System
license:             GPL
license-file:        LICENSE
author:              Felipe Almeida Lessa
copyright:           (c) 2009 Felipe A. Lessa
maintainer:          felipe.lessa@gmail.com
build-type:          Simple
tested-with:         GHC
extra-source-files:  examples/*.hs
description:
  This library has everything you need to create your @dzen@'s
  bar input strings using powerful combinators in a type-safe way.
  .
  It can be used to create standalone \"scripts\" with @runhaskell@
  or it can be used inside @xmonad@'s main function.
  .
  To see what can be done, please read the documentation of the
  toplevel module "System.Dzen".

library
  hs-source-dirs:      src
  build-depends:       base >= 4
                     , colour
                     , process
                     , data-default
                     , contravariant
                     , dlist
  ghc-options:         -Wall
  exposed-modules:     System.Dzen
                     , System.Dzen.Base
                     , System.Dzen.Colour
                     , System.Dzen.Graphics
                     , System.Dzen.Padding
                     , System.Dzen.Bars
                     , System.Dzen.Process
                     , System.Dzen.Internal
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

test-suite test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base >= 4
                     , hspec
                     , dzen-utils
  ghc-options:         -Wall
  other-modules:       System.Dzen.PaddingSpec
  default-language:    Haskell2010
